# Tubitak-2209B

./: .gitignore  LICENSE  README.md  pyproject.toml  requirements-dev.txt  requirements-server.txt  requirements-train.txt
configs/: config.py
docs/: API_CONTRACT.md  DATA_SCHEMA.md  KPI_SLO.md  OPS_RUNBOOK.md  PRD.md  RISK_REGISTER_FMEA.md  ROADMAP.md  TECHNICAL_DESIGN.md  TEST_STRATEGY.md
docs/DECISIONS/: ADR-001-mode-architecture.md  ADR-002-attention-scoring.md  ADR-003-privacy-retention.md
docs/plans/: 2026-03-05-model-training-design.md  2026-03-05-model-training-implementation.md  2026-03-12-training-and-integration.md  2026-03-13-colab-ssh-training-design.md  2026-03-13-colab-ssh-training-implementation.md
notebooks/: 01_data_preprocessing.ipynb  02_model_training.ipynb  colab_ssh_setup.ipynb  compare_models.ipynb  train_emotion_model.ipynb  train_merged_parametric.ipynb
scripts/: create_test_split.py  detect_corrupt_images.py  detect_duplicates.py  download_datasets.py  download_results.sh  fix_fer_labels.py  generate_dataset_report.py  prepare_all_datasets.py  run_data_cleaning.py  train_all_models.sh
src/api/: __init__.py  app.py  camera.py  inference.py  run.py
src/attention/: __init__.py  head_pose.py  hybrid_scorer.py  scorer.py  tracker.py
src/data/: __init__.py  dataset.py  mixup.py  prepare_data.py  sampler.py  transforms.py
src/face_recognition/: __init__.py  database.py  detector.py  pipeline.py  recognizer.py
tests/: conftest.py  test_api.py  test_attention.py  test_cleaning.py  test_data.py  test_face_recognition.py  test_models.py
(+10 files in other folders)
